--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,14 @@
 	text-align: left;
 }
 
+.status-window {
+	text-align: left;
+	background-color: black;
+	border-color: black;
+	color: white;
+	margin-bottom: 10px;
+}
+
 .Wizard {
 	color: orange;
 }
