- Added descriptions and better stats to all classes/races - Added help page with instructions and command help

--- a/css/custom.css
+++ b/css/custom.css
@@ -29,6 +29,35 @@
 	border-color: white;
 }
 
+.help-grid {
+	text-align: left;
+	background-color: black;
+	border-color: black;
+	color: white;
+	margin-bottom: 10px;
+}
+
+.help-head {
+	text-align: center;
+	font-size: 20px;
+	border-bottom: 1px solid;
+	border-color: white;
+}
+
+.help-command {
+	text-align: center;
+}
+
+.command-style {
+	color: #ae81dd;
+}
+
+.help-row {
+	border-bottom: 1px solid;
+	border-color: white;
+	margin-top: 5px;
+}
+
 .Wizard {
 	color: orange;
 }
