- Modifications to layout to support further UI such as the map - Began implementing the map UI piece - Switched to webpack

--- a/css/custom.css
+++ b/css/custom.css
@@ -24,6 +24,11 @@
 	margin-top: 10px;
 }
 
+.map {
+	height: 200px;
+	width: 200px;
+}
+
 .inventory-title {
 	border-bottom: 1px solid;
 	border-color: white;
